<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/main_linear_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_conteudo"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/main_img_profile"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/main_txt_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_linear_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_conteudo"
            android:layout_below="@+id/main_linear_1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:text="@string/label_idade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />

                <TextView
                    android:text="@string/label_cpf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:text="@string/label_telefone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:text="@string/label_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:text="@string/label_idioma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_txt_idade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/main_txt_cpf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/main_txt_telefone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/main_txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:id="@+id/main_txt_idioma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_linear_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_conteudo"
            android:orientation="vertical"
            android:layout_below="@+id/main_linear_2">

            <TextView
                android:text="@string/label_resumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_txt_resumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_linear_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_conteudo"
            android:orientation="vertical"
            android:layout_below="@+id/main_linear_3">

            <TextView
                android:text="@string/label_experiencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_txt_experiencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_linear_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_conteudo"
            android:orientation="vertical"
            android:layout_below="@+id/main_linear_4">

            <TextView
                android:text="@string/label_competencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/main_txt_competencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
